--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "bootstrap-vue": "^2.23.1",
     "cors": "^2.8.5",
     "date-fns": "^3.6.0",
     "vue": "^3.4.21",
